force-app/main/default/objects/Gala_Level__c/Gala_Level__c.object-meta.xml
<CustomObject>
    <description>Config object: the sellable gala levels (individual ticket, table, sponsorship tiers, etc.). Each level sets its price, seats/tables included, the non-deductible (fair-market) value, and benefits — so recording a gala purchase is just picking a level. Admin-maintained; client provides the exact list. Gala Event Gifts. Author: Jason Ott.</description>
    <label>Gala Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gala Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>