force-app/main/default/objects/Gala_Level__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Only active levels are offered when recording a gala purchase. Gala Event Gifts / Jason Ott.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>