force-app/main/default/objects/Gala_Level__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>What the buyer receives at this level (program ad, signage, VIP reception, tickets, etc.). Gala Event Gifts / Jason Ott.</description>
    <label>Benefits</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>