force-app/main/default/objects/Gala_Level__c/fields/Level_Type__c.field-meta.xml
<CustomField>
    <fullName>Level_Type__c</fullName>
    <description>Broad category of the level. PLACEHOLDER value set pending the client's exact level list. Gala Event Gifts / Jason Ott.</description>
    <label>Level Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Ticket</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>