force-app/main/default/objects/Gala_Level__c/fields/Non_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Deductible_Amount__c</fullName>
    <description>The non-deductible / fair-market value for this level (the dinner + benefits received). The tax-deductible portion of a purchase = Price - this (feeds the JSI-86 deductible fields on the Opportunity). Gala Event Gifts / Jason Ott.</description>
    <label>Non-Deductible Amount (FMV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>