force-app/main/default/objects/Gala_Level__c/fields/Seats_Included__c.field-meta.xml
<CustomField>
    <fullName>Seats_Included__c</fullName>
    <description>How many seats/tickets this level includes (e.g. individual = 1, table = 10). Gala Event Gifts / Jason Ott.</description>
    <label>Seats Included</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>