force-app/main/default/objects/Gala_Level__c/fields/Tables_Included__c.field-meta.xml
<CustomField>
    <fullName>Tables_Included__c</fullName>
    <description>How many tables this level includes (individual ticket = 0; table = 1; major sponsor = multiple). Drives auto-creation of the table records. Gala Event Gifts / Jason Ott.</description>
    <label>Tables Included</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>